"Feat: Adds the purpose of the website"

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Akan Names</title>
 </head>
 <body>
-    
+    <div class="mains">
+        <p class="name">Akan Names<br>Website</p>
+        <p class="name1">Get your Akan Name from your birthday</p>
+        <button class="start">Get Started</button>
+    </div>
 </body>
 </html>
