"Fix: Structure fixes for the homepage'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="mains">
         <p class="name">Akan Names<br>Website</p>
         <p class="name1">Get your Akan Name from your birthday</p>
-        <button class="start">Get Started</button>
+        <button class="start">
+            <a href = "form.html">Give it a try!</a>
+        </button>
     </div>
 </body>
 </html>
