--- a/form.html
+++ b/form.html
@@ -7,11 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="form">
+    <form>
         <p class="name2">Select your Gender</p>
-        <input type="radio" name="gender" value="male">Male<br>
-        <input type="radio" name="gender" value="female">Female<br>
-        <input type="radio" name="gender" value="other">Other<br>
-    </div>
+            <input type="radio" name="gender" value="male">Male<br>
+            <input type="radio" name="gender" value="female">Female<br>
+            <input type="radio" name="gender" value="other">Other<br>
+        <label for="start">Birthday:</label>
+        <input type="date" id="start2"  name="start2">
+        <br>
+        <button class="button" type="submit" value="Submit">Submit</button>
+    </form>
 </body>
 </html>
