"Feat: Added information on Akan Names"

--- a/form.html
+++ b/form.html
@@ -5,10 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="Stylesheet" type="text/css" href="akan.css">
 </head>
 <body>
     <p class="edit">
         Akan names 
+    </p>
+    <P class="tell">
+        Akan names come from a customary naming framework for people from nations like Togo, 
+        Ivory Coast and Ghana. A child's name is not set in stone by factors encompassing 
+        their introduction to the world. For instance, the day of their introduction
+        to the world or the way in which they were conceived may figure out which name 
+        they get regardless of their orientation. 
+        These Akan names imply the day one is born.
+    </P>
+    <p class="tell1">
+        Depending on gender and day of the week one can tell their Akan name by their birthday.<br>
+        For males:<br>
+            Sunday: Kwasi<br>
+            Monday: Kwadwo<br>
+            Tuesday: Kwabena<br>
+            Wednesday: Kwaku<br>
+            Thursday:  Yaw<br>
+            Friday: Kofi<br>
+            Saturday: Kwame<br>
+            <br>
+        For females:<br>
+            Sunday: Akosua<br>
+            Monday: Adwoa<br>
+            Tuesday: Abenaa<br>
+            Wednesday: Akua<br>
+            Thursday:  Yaa<br>
+            Friday: Afua<br>
+            Saturday: Ama<br>
     </p>
     <form id = "form">
         <p class="name2">Select your Gender</p>
