--- a/form.html
+++ b/form.html
@@ -40,10 +40,9 @@
             Saturday: Ama<br>
     </p>
     <div class="form">
-        <div class="form1">
                 <div class="form2">
                   <label for="century" class="lbl1">Century</label>
-                  <input type="number" class="lbl2" placeholder="Input example 10 " id="century" required  min="0" max="30">
+                  <input type="number" class="lbl2" placeholder="Input example 10 for the 10th century " id="century" required  min="0" max="30">
                 </div>
                 <div class="form2">
                   <label for="year" class="lbl1">Year</label>
@@ -58,9 +57,11 @@
                   <input type="number" placeholder="Input day of the month example 3" class="lbl2" id="day" required min="0" max="12">
                 </div>
                 <form class="bttn">
+                    <p class="g1">Choose Your Gender</p>
                   <input type="radio" class="lbl1" value="male" id="bt1" name="gend" required>Male
                   <input type="radio" class="lbl2" value="female" id="bt1" name="gend" required>Female
                 </form>
+    </div>
                 <br>
                 <button type="button" name="button" class="bt2" onclick="checkDayOfWeek();">Get Akan Name</button>
                 <p id="result"></p>
